# data-engineering-projects

05_airflow-dbt-snowflake-olist/: .gitignore  Dockerfile  docker-compose.yaml  example.env  pyproject.toml
05_airflow-dbt-snowflake-olist/airflow/: Dockerfile  pyproject.toml
05_airflow-dbt-snowflake-olist/airflow/dags/: config.py  mappings.py
05_airflow-dbt-snowflake-olist/airflow/dags/olist/: dbt_olist_product_performance_mart.py  olist_to_snowflake_etl.py
05_airflow-dbt-snowflake-olist/dbt/: profiles.yml  pyproject.toml
05_airflow-dbt-snowflake-olist/dbt/dbt_olist_snowflake/: dbt_project.yml
05_airflow-dbt-snowflake-olist/dbt/dbt_olist_snowflake/macros/: cast_brt_timestamp.sql
05_airflow-dbt-snowflake-olist/dbt/dbt_olist_snowflake/models/: schema.yml  sources.yml
05_airflow-dbt-snowflake-olist/dbt/dbt_olist_snowflake/models/marts/: fact_orders.sql  fact_orders_geography.sql  fact_product_performance.sql  fact_seller_performance.sql
05_airflow-dbt-snowflake-olist/dbt/dbt_olist_snowflake/models/staging/: stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql
07_aws-pipeline-retail/: README.md  config.py  eda.py  glue-crawler-iam-role.json  infra.sh  infra_glue_db_raw.json  infra_glue_table_curated.json  pyproject.toml  s3-access-policy.json  stream_dash_lazy.py
07_aws-pipeline-retail/data/raw/: countries_with_coords.csv
07_aws-pipeline-retail/sql/: 0001_top_products_by_revenue.sql  0002_top_months_by_revenue.sql  0003_top_countries_by_revenue.sql  0004_top_customers_by_revenue.sql
