[project]
name = "airflow-project"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "apache-airflow-providers-snowflake>=6.12.0",
    "click==8.2.1",
    "kaggle>=2.0.1",
    "loguru>=0.7.3",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "snowflake-sqlalchemy>=1.9.0",
]

[dependency-groups]
dbt = [
    "dbt-core>=1.11.2",
    "dbt-snowflake>=1.11.2",
    "snowflake-connector-python>=4.4.0",
]
dev = [
    "apache-airflow==3.0.4",
]
